--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Azwin Lam"
   avatar           : "profile2.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Aspiring Data Scientist looking for work experience opportunities"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : 
