--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Azwin Lam"
-  avatar           : "profile2.png"
+  avatar           : "profile.png"
   bio              : "Aspiring Data Scientist looking for work experience opportunities"
   location         : "Hong Kong"
   employer         :
