--- a/_config.yml
+++ b/_config.yml
@@ -218,7 +218,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
+  # _articles
   - scope:
       path: ""
       type: articles
