--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  blogs:
+  blog:
     output: true
     permalink: /:collection/:path/
   portfolio:
@@ -218,10 +218,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _blogs
+  # _blog
   - scope:
       path: ""
-      type: blogs
+      type: blog
     values:
       layout: single
       author_profile: true
